@@ -7,7 +7,10 @@ Changes in version 0.6.3
 * Added SigmaScaling selection strategy.
 
 * Changed EvolutionMonitor to use invokeAndWait.  Means that GUI updates
-  temporarily block evolution but avoids the problem of an unresponsive UI. 
+  temporarily block evolution but avoids the problem of an unresponsive UI.
+
+* Added ListInversion evolutionary operator.  Randomly reverses subsections of
+  lists.
 
 
 Changes in version 0.6.2
